--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://optimistictrousers.github.io/TOP-shopping-cart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "@types/jest-expect-message": "^1.0.4",
+    "gh-pages": "^4.0.0",
     "jest-each": "^28.1.3",
     "jest-expect-message": "^1.0.2",
     "react": "^18.2.0",
@@ -20,6 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "coverage": "jest --coverage"
   },
   "eslintConfig": {
@@ -44,6 +48,6 @@
     "jest-fetch-mock": "^3.0.3"
   },
   "jest": {
-    "resetMocks": false 
+    "resetMocks": false
   }
 }
