--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping-cart",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://optimistictrousers.github.io/shopping-cart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
